--- a/assets/less/sections.less
+++ b/assets/less/sections.less
@@ -1,6 +1,8 @@
+
+
 .main {
   height: 100vh;
-  background: #0E000E;
+  background: #0E000E !important;
 
   display: flex;
   align-items: center;
@@ -59,4 +61,48 @@
       padding: 13px 40px 12px;
     }
   }
+}
+
+.section {
+  padding: 37px 0;
+  h2 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    line-height: normal;
+    font-size: 42px;
+    margin-bottom: 37px;
+
+    color: #67FAD6;
+  }
+
+  h3 {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 29px;
+    font-size: 24px;
+    margin-bottom: 30px;
+  }
+
+  p {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    font-size: 14px;
+  }
+}
+
+.section {
+  background: linear-gradient(180deg, #161C31 0%, #18273C 100%);
+}
+
+.section:nth-child(odd) {
+  background: #334267;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+}
+
+.section-2 {
+
 }
