--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -37,4 +37,13 @@ header {
 .icon-block {
   display: flex;
   align-items: center;
+
+  img {
+    margin-right: 20px;
+  }
+
+  .small {
+    .font(14px, normal, 500);
+    margin: 0;
+  }
 }
