--- a/assets/less/sections-p1.less
+++ b/assets/less/sections-p1.less
@@ -1,5 +1,5 @@
 .section {
-  padding: 37px 0;
+  padding: 40px 0 100px;
   background: linear-gradient(180deg, #161C31 0%, #18273C 100%);
 
   h2 {
@@ -10,21 +10,16 @@
 
   h3 {
     .font(24px, 29px, 500);
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
 
   p {
-    .font(14px, normal, 500);
+    .font(20px, 29px, 300);
+    margin-bottom: 30px;
   }
 
   &:nth-child(odd) {
     background: #334267;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-  }
-}
-
-.section-2 {
-  img {
-    margin-right: 20px;
   }
 }
