--- a/assets/less/sections-p2.less
+++ b/assets/less/sections-p2.less
@@ -1,6 +1,6 @@
 .main {
   height: 100vh;
-  background: #0E000E !important;
+  background: url('../images/bg/header_bg.svg') center/cover;
 
   display: flex;
   align-items: center;
