--- a/assets/less/sections-p2.less
+++ b/assets/less/sections-p2.less
@@ -7,9 +7,13 @@
   justify-content: center;
 
   h1 {
-    .font(72px, 88px, 700);
+    .font(62px, 88px, 700);
     text-transform: uppercase;
     margin: 0 0 10px 0;
+  }
+
+  nav {
+    background-color: red;
   }
 
   blockquote {
