--- a/assets/less/sections-p1.less
+++ b/assets/less/sections-p1.less
@@ -1,11 +1,14 @@
 .section {
   padding: 40px 0 100px;
-  background: linear-gradient(180deg, #161C31 0%, #18273C 100%);
 
   h2 {
     .font(42px, normal, bold);
     margin-bottom: 37px;
     color: #67FAD6;
+
+    &.small {
+      .font(32px, 44px, bold);
+    }
   }
 
   h3 {
@@ -13,13 +16,75 @@
     margin-bottom: 40px;
   }
 
+  h4 {
+    .font(20px, 24px, 500);
+    margin-bottom: 10px;
+  }
+
   p {
     .font(20px, 29px, 300);
     margin-bottom: 30px;
   }
 
-  &:nth-child(odd) {
+
+  &.bg-dark {
+    background: linear-gradient(180deg, #161C31 0%, #18273C 100%);
+  }
+
+  &.bg-light {
     background: #334267;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.section-2 {
+  background: url('../images/bg/Our_life_bg.svg') center/cover;
+}
+
+.section-3 {
+  position: relative;
+
+  &:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    content: '';
+    background: url('../images/bg/Solution_bg.svg') top center no-repeat;
+    z-index: 1;
+  }
+
+  .container {
+    position: relative;
+    z-index: 5;
+  }
+
+  .step {
+    display: flex;
+    justify-content: space-between;
+
+    .num {
+      .font(32px, 40px, 300);
+      text-align: center;
+
+      span {
+        .font(14px, 20px, 400);
+        display: block;
+        text-align: center;
+      }
+    }
+
+    .line {
+      width: 50px;
+      flex: 50px 0 0;
+      height: 1px;
+      background: #3F517E;
+      margin: 10px 20px 0 10px;
+    }
+
+    p {
+      .font(16px, 23px, 300);
+    }
   }
 }
