--- a/assets/less/sections-p2.less
+++ b/assets/less/sections-p2.less
@@ -1,3 +1,5 @@
+@import "team";
+
 .main {
   height: 100vh;
   background: url('../images/bg/header_bg.svg') center/cover;
@@ -63,4 +65,8 @@
       padding: 13px 40px 12px;
     }
   }
+}
+
+.section-9 {
+  color: #333;
 }
