--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -27,7 +27,9 @@ html, body {
   align-items: center;
 
   img {
-    margin-right: 20px;
+    margin-right: 25px;
+    width: 40px;
+    flex: 40px 0 0;
   }
 
   .small {
@@ -38,4 +40,11 @@ html, body {
 
 .separator {
   height: 100px;
+}
+
+.tabs__content {
+  display: none;
+}
+.tabs__content.active {
+  display: block;
 }
