--- a/assets/less/sections-p2.less
+++ b/assets/less/sections-p2.less
@@ -1,4 +1,6 @@
 @import "team";
+@import "partners";
+
 
 .main {
   height: 100vh;
@@ -68,5 +70,11 @@
 }
 
 .section-9 {
-  color: #333;
+  background: url('/images/team/team_bg.svg') center/cover;
 }
+
+.section-10 {
+  background: url('/images/partners/partners_bg.svg') center/cover;
+
+}
+
