--- a/assets/less/sections-p1.less
+++ b/assets/less/sections-p1.less
@@ -2,12 +2,12 @@
   padding: 40px 0 100px;
 
   h2 {
-    .font(42px, normal, bold);
+    .font(42px, normal, 700);
     margin-bottom: 37px;
     color: #67FAD6;
 
     &.small {
-      .font(32px, 44px, bold);
+      .font(32px, 44px, 700);
     }
   }
 
@@ -134,5 +134,136 @@
         }
       }
     }
+  }
+}
+
+.section-6 {
+  .tabs {
+    &__caption {
+      border-bottom: 2px solid #283452;
+      margin-bottom: 50px;
+
+      li {
+        .font(24px, 29px, 500);
+        display: inline-block;
+        padding: 10px 0;
+        cursor: pointer;
+
+        &:not(:last-child) {
+          margin-right: 50px;
+        }
+
+        &.active {
+          color: #FAB04B;
+          position: relative;
+
+          &:after {
+            display: block;
+            position: absolute;
+            content: '';
+            bottom: -3px;
+            width: 100%;
+            height: 6px;
+            background: #FAB04B;
+          }
+        }
+      }
+    }
+
+    .icon-block {
+
+      align-items: flex-start;
+
+      img {
+        margin-right: 50px;
+        width: 90px;
+        flex: 90px 0 0;
+      }
+
+      h4 {
+        .font(20px, 24px, 700);
+        color: #67FAD6;
+      }
+
+      p, ul {
+        .font(16px, 24px, 300);
+        margin-bottom: 0;
+      }
+
+      ul {
+        li {
+          position: relative;
+          margin-bottom: 5px;
+
+          &:before {
+            content: '';
+            display: block;
+            width: 6px;
+            height: 6px;
+            border-radius: 6px;
+            background: #67FAD6;
+            position: absolute;
+            top: 8px;
+            left: -16px;
+          }
+        }
+      }
+
+    }
+
+  }
+
+  background: url('../images/bg/Key_features_bg.svg') bottom right/cover no-repeat;
+}
+
+.section-7 {
+  .icon-block {
+    align-items: flex-start;
+
+    img {
+      width: 95px;
+      flex: 95px 0 0;
+      margin-right: 40px;
+    }
+
+    .price {
+      .font(24px, normal, 400);
+      color: #FAB04B;
+      margin-bottom: 37px;
+    }
+
+    .text {
+      span {
+        font-size: 12px;
+        color: #67FAD6;
+      }
+
+      p {
+        font-weight: 400;
+        margin: 5px 0;
+      }
+    }
+
+    .diagram {
+      .row {
+        .font(14px, 24px, 400);
+
+        white-space: nowrap;
+
+        span {
+          font-weight: 700;
+          margin-bottom: 5px;
+        }
+      }
+
+      .col-1 {color: #4a66ac;}
+      .col-2 {color: #D4707C;}
+      .col-3 {color: #6EBD6B;}
+      .col-4 {color: #67FAD6;}
+      .col-5 {color: #8B70D4;}
+      .col-6 {color: #D4707C;}
+    }
+
+
   }
 }
