--- a/assets/less/sections-p1.less
+++ b/assets/less/sections-p1.less
@@ -267,3 +267,31 @@
 
   }
 }
+
+.section-8 {
+  .row {
+    overflow: auto;
+    padding-bottom: 30px;
+
+    &::-webkit-scrollbar {
+      height: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: #334267;
+      border: 0;
+      box-shadow: none;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #96A9D6;
+      border: 0;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: #717fa4;
+    }
+  }
+}
