put social buttons to footer

--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -27,4 +27,30 @@ footer {
     margin-bottom: 30px;
   }
 
+  .flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav {
+    padding: 27px 0;
+
+    a {
+      color: #67FAD6;
+      margin-right: 20px;
+      display: inline-flex;
+    }
+  }
+
+  .container {
+    position: relative;
+  }
+
+  .footer-logo {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+
 }
