--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -56,6 +56,7 @@ header {
     }
 }
 
+
 .header-logo {
   display: flex;
   img {
@@ -67,6 +68,7 @@ header {
 .header-socials {
   a {
     margin-left: 1rem;
+    text-decoration: none;
   }
 }
 
