--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -37,9 +37,15 @@ footer {
     padding: 27px 0;
 
     a {
+      .font(16px, 20px, 400);
       color: #67FAD6;
       margin-right: 20px;
       display: inline-flex;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
