--- a/assets/less/sections-p1.less
+++ b/assets/less/sections-p1.less
@@ -1,5 +1,6 @@
 .section {
   padding: 40px 0 100px;
+  margin-top: -5px;
 
   h2 {
     .font(42px, normal, 700);
@@ -272,6 +273,7 @@
   .row {
     overflow: auto;
     padding-bottom: 30px;
+    margin: 0;
 
     &::-webkit-scrollbar {
       height: 8px;
