--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -14,9 +14,15 @@ header {
     padding: 27px 0;
 
     a {
+      .font(16px, 20px, 400);
       color: #67FAD6;
       margin-right: 20px;
       display: inline-flex;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 
@@ -56,7 +62,6 @@ header {
     }
 }
 
-
 .header-logo {
   display: flex;
   img {
@@ -77,6 +82,7 @@ header {
     margin-right: 2rem;
   }
 
+  display: block;
   color: #fff;
 }
 
@@ -87,11 +93,53 @@ header {
 .header-socialAndLang {
   display: flex;
   flex-flow: nowrap;
+  align-items: center;
   justify-content: center;
 }
 
-.header-socialAndLang-item {
-  margin-left: 1rem;
+.languages {
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  height: 39px;
+  overflow: hidden;
+  padding-right: 20px;
 
+  &:after {
+    content: '';
+    display: block;
+    width: 8px;
+    height: 5px;
+    position: absolute;
+    top: 17px;
+    right: 0;
+    background: url('../images/icons/arrow.svg') center/cover;
+    transition: all .3s;
+  }
+
+  &.open {
+    overflow: inherit;
+
+    &:after {
+      transform: rotate(180deg);
+    }
+  }
+
+  div {
+    .font(14px, 39px, 400);
+    display: block;
+    order: 1;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &.active {
+      order: 0;
+      display: block;
+      text-decoration: none;
+    }
+
+  }
 }
-
