--- a/assets/less/sections-p2.less
+++ b/assets/less/sections-p2.less
@@ -4,6 +4,7 @@
 
 .main {
   height: 100vh;
+  min-height: 637px;
   background: url('../images/bg/header_bg.svg') center/cover;
 
   display: flex;
@@ -20,7 +21,7 @@
     background-color: red;
   }
 
-  blockquote {
+  .info {
     .font(26px, 35px, 300);
     position: relative;
     padding-left: 55px;
